--- a/Customer_sentiment.ipynb
+++ b/Customer_sentiment.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 94,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -63,16 +63,17 @@
     "nltk.download('stopwords')\n",
     "nltk.download('punkt')\n",
     "nltk.download('wordnet')\n",
-    "\n",
-    "#import snowballstemmer\n",
+    "import unicodedata\n",
+    "import snowballstemmer\n",
     "\n",
     "from nltk.corpus import stopwords\n",
     "import string \n",
-    "#from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "import re\n",
     "import copy\n",
     "\n",
-    "from sklearn.utils import resample"
+    "from sklearn.utils import resample\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
   {
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
        "(14640, 3)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -144,34 +145,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>5026</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>Southwest</td>\n",
-       "      <td>@SouthwestAir Although the wait was long due t...</td>\n",
+       "      <td>9812</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>US Airways</td>\n",
+       "      <td>@USAirways 2 hours and counting. ..what kind o...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>13381</td>\n",
+       "      <td>10608</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>US Airways</td>\n",
+       "      <td>@USAirways baggage drop at phl b/c is incredib...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12648</td>\n",
        "      <td>negative</td>\n",
        "      <td>American</td>\n",
-       "      <td>@AmericanAir the one at 11:30am? My app still ...</td>\n",
+       "      <td>@AmericanAir Late Flight again geez flt2417 #L...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2491</td>\n",
+       "      <td>12037</td>\n",
        "      <td>negative</td>\n",
-       "      <td>United</td>\n",
-       "      <td>@united outsourcing ticket and gate agents at ...</td>\n",
+       "      <td>American</td>\n",
+       "      <td>@AmericanAir Okay, I think 1565 has waited lon...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>692</td>\n",
+       "      <td>295</td>\n",
        "      <td>neutral</td>\n",
-       "      <td>United</td>\n",
-       "      <td>@united is flight 587 from DFW to ORD currentl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>18</td>\n",
-       "      <td>positive</td>\n",
        "      <td>Virgin America</td>\n",
-       "      <td>I â¤ï¸ flying @VirginAmerica. âºï¸ð</td>\n",
+       "      <td>@VirginAmerica I applied for a position in @fl...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -179,21 +180,21 @@
       ],
       "text/plain": [
        "      airline_sentiment         airline  \\\n",
-       "5026           positive       Southwest   \n",
-       "13381          negative        American   \n",
-       "2491           negative          United   \n",
-       "692             neutral          United   \n",
-       "18             positive  Virgin America   \n",
+       "9812           negative      US Airways   \n",
+       "10608          negative      US Airways   \n",
+       "12648          negative        American   \n",
+       "12037          negative        American   \n",
+       "295             neutral  Virgin America   \n",
        "\n",
        "                                                    text  \n",
-       "5026   @SouthwestAir Although the wait was long due t...  \n",
-       "13381  @AmericanAir the one at 11:30am? My app still ...  \n",
-       "2491   @united outsourcing ticket and gate agents at ...  \n",
-       "692    @united is flight 587 from DFW to ORD currentl...  \n",
-       "18            I â¤ï¸ flying @VirginAmerica. âºï¸ð  "
+       "9812   @USAirways 2 hours and counting. ..what kind o...  \n",
+       "10608  @USAirways baggage drop at phl b/c is incredib...  \n",
+       "12648  @AmericanAir Late Flight again geez flt2417 #L...  \n",
+       "12037  @AmericanAir Okay, I think 1565 has waited lon...  \n",
+       "295    @VirginAmerica I applied for a position in @fl...  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +217,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +240,7 @@
        "Name: airline_sentiment, dtype: int64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +277,7 @@
        "(14640, 2)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +355,7 @@
        "4  @VirginAmerica and it's a really big bad thing...          negative"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +485,7 @@
        "4                 0  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 106,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -547,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +557,7 @@
        "[Text(0, 0.5, 'Percent')]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -599,16 +600,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x219efadf288>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x20137918b08>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -632,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +764,7 @@
        "[14640 rows x 3 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +922,7 @@
        "4                 0                 virginamerica really big bad thing  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 112,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -962,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 113,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -998,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 114,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1023,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 115,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1133,7 +1134,7 @@
        "2               2  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 116,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1254,7 +1255,7 @@
        "2               2  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1411,7 +1412,7 @@
        "4               5  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,10 +1439,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def tokenize(s): \n",
     "    tokens = re_tok.sub(r' \\1 ', s).split()\n",
     "    return stemmer.stemWords(tokens)\n",
@@ -1454,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1464,16 +1466,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\piyush\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:469: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
-    "scores = cross_val_score(LogisticRegression(C=10, dual=True), tfidf_train, y_train, cv=5)"
+    "scores = cross_val_score(LogisticRegression(C=10, solver='liblinear', dual=True), tfidf_train, y_train, cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1493,7 @@
        "array([0.78780488, 0.77804878, 0.77756098, 0.77306003, 0.78965349])"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1513,7 @@
        "(0.7812256305871991, 0.006395536263017365)"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,9 +1531,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\piyush\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1533,7 +1552,7 @@
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1545,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1573,7 @@
        "array([0, 0, 0, ..., 0, 0, 1])"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1590,6 +1609,20 @@
    "source": [
     "print(metrics.classification_report(y_test, preds))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
